# CodeArena

./: .env  .gitignore  README.md  design-doc.md  docker-compose.yml  package-lock.json
client/: package-lock.json  package.json
dev-backend/: Cargo.toml
dev-backend/.sqlx/: query-0a303a92ede74643bab07859ce37a6a274ec5e052c13d8a68839a908528b1b21.json  query-1efe9f0e89e8233e1967fb2c7f8bba1bedc176e3ade6905c91c254188a8c1eb4.json  query-228f9ebe3983c1704fb3e9994265bbf66eab4a31cde465c90b8c9f145a8d538a.json  query-337161ce0f306d0e466c651e110608f73cc4feb0ecca23804ae228bbee955798.json  query-55496be7357375f1dc90ddedf4c58b68747a3759b81b2709be5e3405778599c6.json  query-93522ca7195a637e5e9cfadd01df555725d6fde4098d0b9031c0927d641ceee8.json  query-ccba16b4024cc3787913864eabe4b2bebca65761dfbee69b79c96c7cf738c0a7.json  query-f4b5a47eb77aa05cf2769e9b52214fa89eeb62162f59df5fc949904409981e72.json
dev-backend/src/: main.rs
dev-backend/src/config/: db.rs
dev-backend/src/handlers/: mod.rs  problem_handler.rs  solution_handler.rs
dev-backend/src/models/: mod.rs  problem.rs  problem_query.rs  solution.rs  solution_query.rs  user.rs
dev-backend/src/repositories/: database.rs  mod.rs  mysql_database.rs
dev-backend/src/routes/: mod.rs  problem_routes.rs
dev-bd/: dev-db.sql  init.sql  lc-bd.mwb  lc-bd.mwb.bak
dev-frontend/: README.md  components.json  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js  tsconfig.json
migrations/: 20250317025529_test_db_sqlx.sql
node-backend/: .env  README.md  app.js  package-lock.json  package.json
(+51 files in other folders)
